# QUBOSergio

./: .dockerignore  .gitignore  Dockerfile.demo  quantization-toolkit.code-workspace  readme.md  test.ps1
core/: _setup.py  pyproject.toml
core/itcl_quantization/: __init__.py  _logging.py  ids.py
core/itcl_quantization/json/: specification.py
core/itcl_quantization/quantization/: constants.py  lut.py  operators.py
core/tests/quantization_test/: test_dtype.py  test_generic_dtype.py  test_lut.py
demo/: pyproject.toml
demo/bikes_vs_weather/: model.h5  readme.md
demo/bikes_vs_weather/itclq/: quant_keras_model.json  quantize.ipynb
demo/bikes_vs_weather/kaggle/: bikes-vs-weather.ipynb
demo/bikes_vs_weather/tflite/: model.tflite  quantize.ipynb  tflite_int8.json
demo/celia_energia_lstm/: model.json  plot.html  quantize.py
demo/celia_energia_lstm/model/: model.h5
demo/demo_lib/: README.md  pyproject.toml
demo/demo_lib/demo_lib/: fpga.py  mqtt.py
demo/lstm_quant/: infer.py  inspect_model.ipynb  onnx_.py  quantize.ipynb  quantize.py  train.ipynb
demo/lstm_quant/data_1_step/: dynamicq.onnx  model.h5  model.json  model.onnx  staticq.onnx
demo/lstm_quant/data_2_steps/: model.h5  model.json
demo/lstm_weather/: infer.py  quantize.py
demo/lstm_weather/models/: 16steps.h5  2steps.h5  model.h5
demo/lstm_weather/qmodels/: 16steps.json  2steps.json  model.json
demo/lstm_weather/train/: Train_an_LSTM_weather_forecasting_model_for_the_Coral_Edge_TPU.ipynb
demo/wedge/: inferq.py  tmp.json  wedge.ipynb  wedge.py
demo/wedge/models/: high_complexity_model.h5  low_complexity_model.h5  medium_complexity_model.h5
demo/wind_speed/: keras.ipynb  tflite.ipynb  wind-speed-prediction-model.ipynb  wind_scaler.pkl  wind_speed.tflite
demo/x3_fpga/: README.md  quantize_x3.py
demo/x3_fpga/create_model/: create.ipynb  model_4l.h5  x.npy  x_test.npy  x_train.npy  y.npy  y_test.npy  y_train.npy
demo/x3_fpga/larger_model/: x_train.npy  y_train.npy
inference_engine/: .pylintrc  __test_models.py  _setup.py  pyproject.toml  readme.md
inference_engine/itcl_inference_engine/: __init__.py
inference_engine/itcl_inference_engine/layers/common/: layer.py  lut.py  operator.py  relu.py  sigmoid.py  tanh.py
inference_engine/itcl_inference_engine/layers/itclq/: lstm.py
inference_engine/itcl_inference_engine/layers/onnx/: build_operator.py  dequantize_linear.py  q_linear_add.py  q_linear_mmul.py  q_linear_sigmoid.py  quantize_linear.py  softmax.py  tanh.py
inference_engine/itcl_inference_engine/layers/tflite/: build_layer.py  dequantize.py  fullyconnected.py  logistic.py  quantize.py  softmax.py  tanh.py
inference_engine/itcl_inference_engine/network/: sequential.py
inference_engine/itcl_inference_engine/util/: check_layer_type.py  floating.py  quantization.py
inference_engine/test/layers_/test_onnx/: test_DequantizeLinear.py  test_QLinearAdd.py  test_QLinearMatMul.py  test_QLinearSigmoid.py  test_QuantizeLinear.py  test_Softmax.py  test_Tanh.py
inference_engine/test/layers_/test_tflite/: test_Dequantize.py  test_FullyConnected.py  test_Logistic.py  test_Quantize.py  (+1 more)
inference_engine/test/test_data/: readme.md
model_converters/keras2json/: _main.py  cnn.json  lstm.json  pyproject.toml
model_converters/keras2json/keras2json/: __init__.py  _convert.py
model_converters/keras2json/models/: model_test_0.h5  model_test_0.json
model_converters/onnx2json/: 2json.py  mnist_high_complexity_float32_tanh.h5  model.onnx  pyproject.toml
model_converters/onnx2json/helpers/: buildOperator.py  graph.py
model_converters/onnx2json/util/: quantization.py  settings.py
model_converters/tflite2json/: pyproject.toml
model_converters/tflite2json/itcl_tflite2json/: __init__.py  _cli.py  _tflite2json.py  model.json  readme.md  settings.yaml
quantizer/: .pylintrc  __init__.py  pyproject.toml  quantize_mnist.py  quantize_regression.py  quantize_regression_x3.py  quantize_wind_speed.py  readme.md
quantizer/docs/: collision.md
quantizer/itcl_quantizer/: __init__.py
quantizer/itcl_quantizer/equalizers/: eq_bundler.py  readme.md
quantizer/itcl_quantizer/interfaces/: serializable.py
quantizer/itcl_quantizer/optimizers/: IOptimizer.py  __init__.py  _debug_plot_optimizer.py  fixed_percent.py  kl_div_optimizer.py  minmax.py  readme.md  scipy_optimizer.py
quantizer/itcl_quantizer/quantizer/: __init__.py
quantizer/itcl_quantizer/tensor_extractor/: __init__.py  abstract_layer.py  operator.py  readme.md  tensor.py
quantizer/itcl_quantizer/util/: __init__.py  collisions.py  const.py  debug.py  logging.py  network.py  typing.py
quantizer/models/keras/: mnist_low_complexity_float32_relu.h5  mnist_medium_complexity_float32_sigmoid.h5
quantizer/qubo_adaround/: fit.py  fit2.py  fit3.py  quantize.py  quantizeClas.py  quantize_clasificacion.py  quantize_regresion.py  quantizeboston.py  quantizepruebas.py
quantizer/qubo_adaround/models/: DWAVE-guide.ipynb  mnist.h5  model.h5  pruebaSergio.ipynb  quantized.json  quantized.json2
quantizer/test/: __init__.py
quantizer/test/test_config/: test_config_keras.py
quantizer/test/test_optimizers/: test_kl_div.py  test_minmax.py
quantizer/test/test_tensor_extractor/: test_node_tensor.py
(+143 files in other folders)
