[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Jorge Ruiz <jorge.ruiz@itcl.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

pandas = "^1.4.3"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
plotly = "^5.9.0"
nbformat = "^5.4.0"
itcl-quantization-toolkit = {path = "../core", develop = true}
itcl-inference-engine = {path = "../inference_engine",  develop = true}
itcl-quantizer = {path = "../quantizer", develop = true}
onnxruntime = "^1.13.1"
scikit-learn = "^1.2.1"
paho-mqtt = "^1.6.1"
demo-lib = {path = "demo_lib", develop = true}
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"
isort = "^5.11.4"
black = "^22.12.0"
ruff = "^0.0.270"
py-spy = "^0.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
