[tool.poetry]
name = "demo-lib"
version = "0.1.0"
description = ""
authors = ["Jorge Ruiz <jorge.ruiz@itcl.es>"]
readme = "README.md"
packages = [{include = "demo_lib"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
paho-mqtt = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
