[tool.poetry]
name = "onnx2json"
version = "0.1.0"
description = "onnx json model converter"
authors = ["Jorge Ruiz Gómez <jorge.ruiz@itcl.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
onnx = "^1.12.0"
tf2onnx = "1.8.5"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
tf2onnx = "1.8.5"
tensorflow = "2.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
